objects/jiffle__Event__c.object
<CustomObject>
    <description>Used to store Jiffle Events.</description>
    <fields>
        <fullName>jiffle__Event_Code__c</fullName>
        <label>Event_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Location__c</fullName>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Status__c</fullName>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_Type__c</fullName>
        <description>Used to store the type of event like EBC, Trade show etc..</description>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Event_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Event UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Meeting_Sync_Date__c</fullName>
        <label>Meeting_Sync_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Nomination_Sync_Date__c</fullName>
        <label>Nomination_Sync_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Survey_Sync_Date__c</fullName>
        <label>Survey Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Virtual_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Event</label>
        <type>Checkbox</type>
    </fields>
    <label>Jifflenow Event</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Event_Location__c</columns>
        <columns>jiffle__Event_Start_Date__c</columns>
        <columns>jiffle__Event_End_Date__c</columns>
        <columns>jiffle__Event_Status__c</columns>
        <columns>jiffle__Event_UUID__c</columns>
        <columns>jiffle__Meeting_Sync_Date__c</columns>
        <columns>jiffle__Event_Code__c</columns>
        <columns>jiffle__Event_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jifflenow Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>